Adding modular architecture, improving styling by adding helper functions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="style.css">
       <title>Meteo</title>
-      <script src="script.js" type="text/javascript" defer></script>
+      <script src="./fetch.js" type="text/javascript" defer></script>
+      <script src="./dataProcessing.js" type="text/javascript" defer></script>
+      <script src="./dynamicStyle.js" type="text/javascript" defer></script>
+      <script src="./main.js" type="text/javascript" defer></script>
+
       <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +27,7 @@
             <input id="submit" type="submit" value="Envoyer">
          </form>
       </header>
-      
+
       <main></main>
    </body>
 </html>
