Updating folder tree

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="style.css">
       <title>Meteo</title>
-      <script src="./fetch.js" type="text/javascript" defer></script>
-      <script src="./dataProcessing.js" type="text/javascript" defer></script>
-      <script src="./dynamicStyle.js" type="text/javascript" defer></script>
+      <script src="./scripts/fetch.js" type="text/javascript" defer></script>
+      <script src="./scripts/dataProcessing.js" type="text/javascript" defer></script>
+      <script src="./scripts/dynamicStyle.js" type="text/javascript" defer></script>
       <script src="./main.js" type="text/javascript" defer></script>
 
       <link rel="stylesheet" href="style.css">
