--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
       <title>Meteo</title>
       <script src="./scripts/fetch.js" type="text/javascript" defer></script>
       <script src="./scripts/dataProcessing.js" type="text/javascript" defer></script>
-      <script src="./scripts/dynamicStyle.js" type="text/javascript" defer></script>
+      <script src="./scripts/staticStyle.js" type="text/javascript" defer></script>
       <script src="./main.js" type="text/javascript" defer></script>
 
       <link rel="stylesheet" href="style.css">
+
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Sacramento&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
    </head>
 
    <body>
