--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
    <body>
       <header>
          <h1>Weather</h1>
+         <a href="index.html">
+            <img src="https://img.icons8.com/ios/50/000000/home--v2.png"/>
+         </a>
          <form>
             <fieldset>
                <legend> City :</legend>
