--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src="./scripts/fetch.js" type="text/javascript" defer></script>
-      <script src="./scripts/dataProcessing.js" type="text/javascript" defer></script>
+      <script src="./modules/fetch.js" type="text/javascript" defer></script>
+      <script src="./modules/dataProcessing.js" type="text/javascript" defer></script>
       <script src="./main.js" type="text/javascript" defer></script>
       
       <link rel="stylesheet" href="style.css">
